--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -3,6 +3,12 @@
     /* background-color: rgb(0, 0, 0); */
 }
 
+
+
+#hero-image {
+    position: relative;
+}
+
 #hero-image {
     display: flex;
     justify-content: center;
@@ -37,7 +43,6 @@
     justify-content: center;
     align-items: center;
 
-
     margin-top: 5%;
     width: 90%;
     /* background-color: rebeccapurple; */
@@ -52,6 +57,7 @@
 }
 
 #homePage-intro p {
+    padding: 3%;
     font-style: italic;
 }
 
@@ -136,6 +142,71 @@
     width: 100%;
 }
 
+/* WHY CHOOSE US CSS */
+
+#reason-content {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    padding: 10%;
+    justify-content: space-between;
+    background-image: url("../images/simple_life_02.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#reason-content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+    z-index: 0; /* Ensure the dimming effect is below other content */
+}
+
+.reason-descs {
+    color: white;
+    width: 40%;
+    height: 100%;
+    flex-direction: column;
+    font-size: 1.2em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    position: relative; /* Add position relative to allow z-index to work */
+    z-index: 1; /* Ensure the text is above the dimming effect */
+}
+
+.reason-descs h3 {
+    padding-bottom: 15%;
+    font-size: 1.5em;
+}
+
+.custom-curve-1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-curve-1 svg {
+    position: relative;
+    display: block;
+    width: calc(145% + 1.3px);
+    height: 89px;
+}
+
+.custom-curve-1 .shape-fill {
+    fill: #FDFDD5;
+}
+
+
 #footer {
     height: 15vh;
     width: 100%;
@@ -176,3 +247,4 @@
     }
 
 }
+
