--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -244,7 +244,8 @@
 
 .custom-curve-2 {
     position: absolute;
-    top: -12.8%;
+    /* top: -12.8%; */
+    bottom: 0;
     left: 0;
     width: 100%;
     overflow: hidden;
