--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -1,20 +1,83 @@
 
 #service-intro {
+    height: 75vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
+
+    /* if would like to use services images remove the justify center below*/
+
+    /* justify-content: center; */
+    align-items: center;
+
+
+    /* background-color: rgb(216, 255, 215); */
+    /* background-color: rgb(233, 214, 152); */
+    /* background-color: rgb(224, 183, 94); */
+    background-color: rgb(253, 253, 213);
+    /* padding: 3%; */
+}
+
+#service-images {
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    /* gap: 1%; */
+    height: 35%;
+    width: 100%;
+    /* border: 1px solid black; */
+    padding-top: 1%;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+
+.service-img {
+    display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(216, 255, 215);
-    padding: 3%;
+    height: 80%;
+    /* width: 32%; */
+    width: 10%;
+    background-color: yellow;
+    background-color: rgb(255, 255, 255);
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px 0px black;
+}
+
+.service-img img {
+    border-radius: 50%;
+    height: 90%;
+    width: 80%;
+    
 }
 
 #intro-title {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2.5rem;
 }
 
 #intro-details {
     font-style: italic;
     font-size: 1.5rem;
+}
+
+#main-service-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 2%;
+    height: 20%;
+    width: 10%;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px 0px black;
+}
+
+#main-service-img img {
+    border-radius: 50%;
+    height: 90%;
+    width: 60%;
 }
 
 #services-provided {
