--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -32,6 +32,8 @@
 }
 
 .service-img {
+    margin-top: 2%;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,6 +54,8 @@
 }
 
 #intro-title {
+    margin-top: 2%;
+
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2.5rem;
 }
@@ -59,6 +63,11 @@
 #intro-details {
     font-style: italic;
     font-size: 1.5rem;
+}
+
+#intro-quote {
+    margin-top: 1%;
+    font-size: 1.1rem;
 }
 
 #main-service-img {
@@ -81,33 +90,82 @@
 }
 
 #services-provided {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-#service1 {
+    height: 300vh;
     
+    /*Can remove the height for it just to fit content but gap wont work as a result so will need margin tops*/
+    width: 100%;
+
+    margin-top: 5%;
+    display: flex;
+    gap: 2%;
+    flex-direction: column;
+    
+    /* justify-content: center;
+    align-items: center; */
+
+    /* background-color: aqua; */
+    
+}
+
+#service1-content {
+    height: 80vh;
+    width: 100%;
+
+    /* margin-left: 0%; */
+    display: flex;
+    
+    /* background-color: yellow; */
+}
+
+#service1-img {
+    margin-left: 5%;
+    height: 100%;
+    width: 50%;
+}
+
+#service1-img img {
+    height: 100%;
+    width: 100%;
+    
+}
+
+#service1 {
+    height: 50%;
+
+    /* background-color: red; */
+
     width: fit-content;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
+    margin-left: 2%;
 }
+
+
+
 #services-title {
     font-size: 2rem;
     font-style: italic;
-    color: orange;
+    /* color: orange; */
 }
 
 #service-list {
    display: flex;
    flex-direction: column;
    width: 100%;
+
+   margin-top: 3%;
    font-size: 1.5rem;
    justify-content: flex-start;
    padding-left: 10%;
     
+}
+
+#service1 button {
+    margin-left: 10%;
+    padding: .5%;
+    width: fit-content;
 }
 
 #orderedList {
