--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -151,14 +151,17 @@
 }
 
 #service-list {
-   display: flex;
-   flex-direction: column;
-   width: 100%;
+    list-style-type: square;
+    color: rgb(100, 100, 100);
 
-   margin-top: 3%;
-   font-size: 1.5rem;
-   justify-content: flex-start;
-   padding-left: 10%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    margin-top: 3%;
+    font-size: 1.5rem;
+    justify-content: flex-start;
+    padding-left: 10%;
     
 }
 
