--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     
-
+    font-family: "Sorts Mill Goudy", serif;
 
     height: 80vh;
     width: 100%;
@@ -222,7 +222,7 @@
     background-color: rgb(140, 190, 120);
     height: 70%;
     width: 80%;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Sorts Mill Goudy", serif;
     display: flex;
     justify-content: space-evenly;
     color: white;
@@ -235,7 +235,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    filter: drop-shadow(20px);
 }
 
 #services-desc {
@@ -249,10 +248,11 @@
     padding-bottom: 3%;
 }
 
-#services-desc h3 {
+#services-desc span {
     font-size: 1.5em;
     text-align: center;
     width: 100%;
+    font-weight: 20;
 }
 
 #plant-image {
@@ -273,6 +273,7 @@
     transition: .4s;
     width: 40%;
     color: white;
+    border-radius: 50px;
 }
 
 #services-desc button:hover {
@@ -303,13 +304,152 @@
     fill: #FDFDD5;
 }
 
-#footer {
-    height: 15vh;
+/* PROJECTS SECTION */
+
+#projects-section {
     width: 100%;
-    background-color: rgb(3, 3, 3);
+    height: 80vh;
 }
 
+#projects-content {
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 10%;
+    justify-content: space-between;
+    background-image: url("../images/simple_life_06.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 0;
+}
 
+#projects-content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+    z-index: -1; /* Ensure the dimming effect is below other content */
+}
+
+#projects-section {
+    font-size: 3em;
+    color: white;
+    font-family: "Sorts Mill Goudy", serif;
+    font-weight: 200;
+}
+
+#projects-section button {
+    background: none;
+    outline: 0;
+    border: 1px solid white;
+    padding: 12px;
+    transition: .4s;
+    width: 15%;
+    color: transparent; /* Transparent text */
+    border-radius: 50px;
+    color: white;
+}
+
+#projects-section button:hover {
+    background-color: white;
+    color: black;
+}
+
+#projects-section button:active {
+    margin: 10px;
+}
+
+/* CONTACT SECTION */
+
+#contact-section {
+    width: 100%;
+    height: 110vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#form-section {
+    background-color: lightgreen;
+    height: 80%;
+    width: 45%;
+    margin-top: 5%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#form-section span {
+    font-size: 2.5rem;
+    padding-bottom: 40px;
+    font-family:'Times New Roman', Times, serif;
+    color: white;
+}
+
+#form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    width: 80%;
+}
+
+#form-container button {
+    margin-top: 10px;
+    width: 20%;
+    align-items: center;
+    height: 10%;
+    background-color: white;
+    border-radius: 10px;
+    font-size: 1.1em;
+    border: 1px solid grey;
+}
+
+#form-container input, textarea {
+    font-size: 18px;
+    padding: 10px;
+    display: block;
+    outline: none;
+    transition: .2s;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid black;
+}
+
+#form-container div {
+    display: flex;
+    gap: 20px;
+}
+
+#footer {
+    height: 30vh;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgb(103, 139, 92);;
+}
+
+.footer-sections {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 70%;
+}
+
+.footer-sections span, a {
+    display:block;
+    font-size: 1.1em;
+}
 
 @media (max-width: 600px) {
     #hero-image {
