--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -424,7 +424,7 @@
     border: 1px solid black;
 }
 
-#form-container div {
+.first-last {
     display: flex;
     gap: 20px;
 }
@@ -450,6 +450,7 @@
     display:block;
     font-size: 1.1em;
 }
+
 
 @media (max-width: 600px) {
     #hero-image {
