--- a/client/src/css/Contact.css
+++ b/client/src/css/Contact.css
@@ -72,7 +72,8 @@
 }
 
 #contact-form-container form {
-    width: 100%;
+    margin: 0 auto;
+    width: 90%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -83,7 +84,7 @@
 .input-container {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     gap: 10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
@@ -97,13 +98,15 @@
 }
 
 #contact-form-container button {
-    padding: 10px;
-    width: 20%;
+    margin-right: auto;
+    margin-left: 0;
+    padding: 15px;
+    width: 25%;
     border: none;
     border-radius: 5px;
     color: white;
     background-color: rgb(50, 160, 50);
-    transition: .5s;
+    transition: .2s;
     letter-spacing: 2px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
