--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -370,14 +370,14 @@
 
 #contact-section {
     width: 100%;
-    height: 110vh;
+    height: 130vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 #form-section {
-    background-color: lightgreen;
+    background-color: white;
     height: 80%;
     width: 45%;
     margin-top: 5%;
@@ -385,13 +385,14 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
 }
 
 #form-section span {
     font-size: 2.5rem;
     padding-bottom: 40px;
     font-family:'Times New Roman', Times, serif;
-    color: white;
+    color: black;
 }
 
 #form-container {
@@ -403,14 +404,19 @@
 }
 
 #form-container button {
-    margin-top: 10px;
+    margin-top: 20px;
     width: 20%;
     align-items: center;
-    height: 10%;
-    background-color: white;
-    border-radius: 10px;
+    padding: 10px;
+    border-radius: 5px;
     font-size: 1.1em;
-    border: 1px solid grey;
+    border: none;
+    transition: .2s;
+    letter-spacing: 2px;
+}
+
+#form-container button:hover {
+    background-color: rgb(200, 200, 200);
 }
 
 #form-container input, textarea {
