added emailjs to contact page

--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -432,7 +432,12 @@
 
 .first-last {
     display: flex;
-    gap: 20px;
+    gap: 10px;
+    width: 100%;
+}
+
+.first-last div {
+    width: 50%;
 }
 
 #footer {
