--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -3,7 +3,9 @@
     /* background-color: rgb(0, 0, 0); */
 }
 
-
+#hiddenMobileNav {
+  display: none;
+}
 
 #hero-image {
     position: relative;
@@ -20,21 +22,24 @@
     width: 100%;
     background-image: url("../images/simple_life_04.jpg");
 
-    /* background: 
+    background: 
     
     linear-gradient(
-      rgba(34, 34, 34, 0.45), 
-      rgba(34, 34, 34, 0.45)
+      rgba(34, 34, 34, 0.61), 
+      rgba(34, 34, 34, 0.685)
     ),
     
-    url("../images/simple_life_04.jpg"); */
+    url("../images/simple_life_04.jpg");
     
     background-size: cover;
     background-position-y: 20%;
     background-attachment: fixed;
     
     
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 8px;
 
+    
     text-align: center;
     font-size: 3em;
     color: white;
@@ -317,6 +322,9 @@
 /* PROJECTS SECTION */
 
 #projects-section {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
     width: 100%;
     height: 80vh;
 }
@@ -329,7 +337,10 @@
     align-items: center;
     flex-direction: column;
     padding: 10%;
-    justify-content: space-between;
+    gap: 58%;
+    text-align: center;
+    /* justify-content: space-between; */
+    justify-content: center;
     background-image: url("../images/simple_life_06.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -359,9 +370,12 @@
     background: none;
     outline: 0;
     border: 1px solid white;
+    /* padding: 12px; */
+    /* padding: 1%; */
     padding: 12px;
     transition: .4s;
     width: 15%;
+    width: 175px;
     color: transparent; /* Transparent text */
     border-radius: 50px;
     color: white;
@@ -400,10 +414,12 @@
 
 #form-section span {
     font-size: 2.5rem;
-    padding-bottom: 40px;
+    /* padding-bottom: 40px; */
+    padding-bottom: 12%;
     font-family:'Times New Roman', Times, serif;
     color: black;
 }
+
 
 #form-container {
     display: flex;
@@ -414,7 +430,11 @@
 }
 
 #form-container button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 20px;
+    
     width: 20%;
     align-items: center;
     padding: 10px;
@@ -423,6 +443,7 @@
     border: none;
     transition: .2s;
     letter-spacing: 2px;
+    
 }
 
 #form-container button:hover {
@@ -456,6 +477,7 @@
     background-color: white;
     display: flex;
     justify-content: space-evenly;
+    /* justify-content: center; */
     align-items: center;
     background-color: rgb(103, 139, 92);;
 }
@@ -465,6 +487,8 @@
     flex-direction: column;
     justify-content: space-evenly;
     height: 70%;
+    
+    align-items: center;
 }
 
 .footer-sections span, a {
@@ -474,6 +498,27 @@
 
 
 @media (max-width: 600px) {
+
+    #hiddenMobileNav {
+        
+        
+        display: block;
+        height: 80vh;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.267);
+        background-color: rgb(183, 221, 161);
+    }
+
+    .mobileNavLink-Container {
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        /* justify-content: space-evenly; */
+        align-items: center;
+        font-size: 18pt;
+    }
+
     #hero-image {
         display: flex;
         justify-content: center;
@@ -528,6 +573,10 @@
         font-size: 13pt;
     }
 
+    #content1-description p {
+        text-align: left;
+    }
+
     #content1-image {
         position: absolute;
         top: 0;
@@ -539,6 +588,21 @@
         height: 25%;
         font-size: 14pt;
 
+    }
+
+    #projects-content {
+        gap: 10%;
+    }
+
+    #form-section {
+        
+        width: 95%;
+    }
+
+    #footer {
+        height: 50vh;
+        display: flex;
+        flex-direction: column;
     }
 }
 
