--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -54,18 +54,21 @@
 }
 
 #intro-title {
+    
+    text-align: center;
     margin-top: 2%;
-
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 2.5rem;
 }
 
 #intro-details {
+    text-align: center;
     font-style: italic;
     font-size: 1.5rem;
 }
 
 #intro-quote {
+    text-align: center;
     margin-top: 1%;
     font-size: 1.1rem;
 }
@@ -97,8 +100,9 @@
 
     margin-top: 5%;
     display: flex;
-    gap: 2%;
     flex-direction: column;
+    justify-content:flex-start;
+    gap: 2%;
     
     /* justify-content: center;
     align-items: center; */
@@ -107,29 +111,31 @@
     
 }
 
-#service1-content {
+.service1-content {
     height: 80vh;
+    
     width: 100%;
 
     /* margin-left: 0%; */
     display: flex;
     
+    
     /* background-color: yellow; */
 }
 
-#service1-img {
+.service1-img {
     margin-left: 5%;
     height: 100%;
     width: 50%;
 }
 
-#service1-img img {
+.service1-img img {
     height: 100%;
     width: 100%;
     
 }
 
-#service1 {
+.service1 {
     height: 50%;
 
     /* background-color: red; */
@@ -144,13 +150,13 @@
 
 
 
-#services-title {
+.services-title {
     font-size: 2rem;
     font-style: italic;
     /* color: orange; */
 }
 
-#service-list {
+.service-list {
     list-style-type: square;
     color: rgb(100, 100, 100);
 
@@ -165,7 +171,7 @@
     
 }
 
-#service1 button {
+.service1 button {
     margin-left: 10%;
     padding: .5%;
     width: fit-content;
@@ -174,4 +180,80 @@
 #orderedList {
     
     font-weight: bold;
+}
+
+@media (max-width: 600px) {
+
+    #service-images {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-evenly;
+        /* gap: 1%; */
+        height: 30%;
+        width: 100%;
+        /* border: 1px solid black; */
+        padding-top: 1%;
+        padding-left: 1%;
+        padding-right: 1%;
+    }
+    
+    .service-img {
+        /* margin-top: 2%;
+    
+        display: flex;
+        justify-content: center;
+        align-items: center; */
+        height: 50%;
+        width: 20%;
+        /* background-color: yellow;
+        background-color: rgb(255, 255, 255);
+        border-radius: 50%;
+        box-shadow: 0px 0px 10px 0px black; */
+    }
+    
+
+
+
+    #services-provided {
+        /* height: fit-content; */
+        /* gap: 8%; */
+        height: fit-content;
+    }
+    .service1-content {
+        
+        /* height: 80vh; */
+        height: 33%;
+        width: 100%;
+        border: 2px solid blue;
+        /* margin-left: 0%; */
+        display: flex;
+        flex-direction: column;
+        
+        
+        
+        /* background-color: yellow; */
+    }
+
+    .service1-img {
+        margin-left: 0%;
+        height: 50%;
+        width: 100%;
+    }
+
+    .service1 {
+        height: 50%;
+    
+        /* background-color: red; */
+    
+        width: fit-content;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        /* align-items: center; */
+        margin-left: 2%;
+    }
+    
+
+    
 }
