adding styling changes

--- a/client/src/css/Projects.css
+++ b/client/src/css/Projects.css
@@ -2,6 +2,15 @@
     text-align: center;
     margin-top: 3%;
     font-size: 2rem;
+
+}
+
+#projectsLine {
+    margin-top: 1%;
+    height: 1px;
+    width: 70%;
+    color: black;
+    background-color: black;
 }
 
 #projects-container {
