--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -41,6 +41,8 @@
 
 #nav2 {
     height: 25vh;
+
+    height: 15vh;
     width: 100%;
     padding: 1%;
     
@@ -52,6 +54,10 @@
     background-color: rgb(53, 116, 77); */
     background-color: rgb(103, 139, 92);
     background-color: rgb(109, 136, 97);
+    background-color: rgb(150, 196, 131);
+    
+
+    /* background-color: rgb(252, 252, 252); */
     /* background-color: rgb(156, 189, 103); */
     /* background-color: rgb(172, 172, 172); */
     /* border-bottom: 1vh solid black; */
@@ -73,15 +79,19 @@
     gap: 3%;
 
     font-size: 1.5rem;
-
+    font-family: "Pacifico", cursive;
+    letter-spacing: 5px;
     /* font-weight: bold; */
+    
     color: #fff;
+    color: black;
     
 }
 
 #main-logo {
     height: 100%;
     width: 25%;
+    width: 14%;
     background-color: rgb(0, 0, 0);
     border: .1em solid black;
 }
