--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -12,24 +12,27 @@
 }
 
 #hero-image {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     
     font-family: "Sorts Mill Goudy", serif;
 
-    height: 80vh;
+    /* height: 80vh; */
+
+    height: 90vh;
     width: 100%;
     background-image: url("../images/simple_life_04.jpg");
 
-    background: 
+    /* background: 
     
     linear-gradient(
       rgba(34, 34, 34, 0.61), 
       rgba(34, 34, 34, 0.685)
     ),
     
-    url("../images/simple_life_04.jpg");
+    url("../images/simple_life_04.jpg"); */
     
     background-size: cover;
     background-position-y: 20%;
@@ -40,10 +43,28 @@
     letter-spacing: 8px;
 
     
+    /* text-align: center;
+    font-size: 3em;
+    color: white; */
+    
+}
+
+#hero-image::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.534);
+    background-color: rgba(0, 0, 0, 0.473);
+   
+}
+
+#hero-image span {
     text-align: center;
     font-size: 3em;
     color: white;
-    
+    z-index: 0;
 }
 
 #hero-image img {
@@ -111,7 +132,7 @@
     /* height: 30%; */
     width: 25%;
     /* font-size: 2rem; */
-    
+
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -234,13 +255,17 @@
 }
 
 #services-container {
-    background-color: rgb(140, 190, 120);
+    /* background-color: rgb(140, 190, 120); */
     height: 70%;
-    width: 80%;
+    width: 100%;
     font-family: "Sorts Mill Goudy", serif;
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
     color: white;
+    /* background-color: black; */
 }
 
 #services-image {
@@ -253,21 +278,50 @@
 }
 
 #services-desc {
+    position: relative;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     height: 100%;
-    width: 50%;
+    width: 35%;
     padding-top: 3%;
     padding-bottom: 3%;
+    background-color: rgb(140, 190, 120);
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+    border-bottom: 25px solid green;
+    border-bottom: 25px solid rgb(103, 139, 92);
+    border-radius: 25px;
 }
 
 #services-desc span {
+    
     font-size: 1.5em;
     text-align: center;
     width: 100%;
     font-weight: 20;
+}
+
+.serviceMotto {
+    font-family: "Pacifico", cursive;
+    letter-spacing: 1px;
+}
+
+.littleMower {
+    display: flex;
+    justify-content: center;
+    
+    height: 20%;
+    width: 40%;
+    position: absolute;
+    left: 0;
+    bottom: -10%;
+}
+
+.littleMower img {
+    height: 100%;
+    width: 100%;
+    object-fit: none;
 }
 
 #plant-image {
@@ -288,6 +342,7 @@
     transition: .4s;
     width: 40%;
     color: white;
+    
     border-radius: 50px;
 }
 
@@ -537,9 +592,9 @@
         
     
         
-        font-size: 3em;
+        /* font-size: 3em;
 
-        color: white;
+        color: white; */
         
     }
     
@@ -547,6 +602,10 @@
         height: 100%;
         width: 100%;
         object-fit: cover;
+    }
+
+    #hero-image span {
+        font-size: 2.5em;
     }
 
     #home-content-container1 {
