--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -1,6 +1,7 @@
 
 #service-intro {
     height: 75vh;
+    height: 85vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -15,7 +16,12 @@
     /* background-color: rgb(233, 214, 152); */
     /* background-color: rgb(224, 183, 94); */
     background-color: rgb(253, 253, 213);
+    /* background-color: rgb(94, 160, 94);
+    background-color: rgb(140, 190, 120);
+    background-color: rgb(141, 140, 139); */
+
     /* padding: 3%; */
+
 }
 
 #service-images {
@@ -29,6 +35,8 @@
     padding-top: 1%;
     padding-left: 1%;
     padding-right: 1%;
+
+    margin-top: 2%;
 }
 
 .service-img {
@@ -44,6 +52,12 @@
     background-color: rgb(255, 255, 255);
     border-radius: 50%;
     box-shadow: 0px 0px 10px 0px black;
+
+    /* border-bottom: 10px solid saddlebrown; */
+
+    border: 15px solid rgb(228, 195, 171);
+
+    /* box-shadow: 0px 0px 11px 15px rgb(228, 195, 171); */
 }
 
 .service-img img {
@@ -58,19 +72,47 @@
     text-align: center;
     margin-top: 2%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
 }
 
 #intro-details {
     text-align: center;
     font-style: italic;
     font-size: 1.5rem;
+
+    margin-top: 2%;
+}
+
+#servicePageBreak {
+    /* width: 90%;
+    height: 5%;
+    background-color: black;
+    background-color: rgb(43, 104, 28); */
+
+    margin-top: 2%;
+    width: 80%;
+    height: 0.2%;
+    background-color: black;
+    background-color: rgb(43, 104, 28);
+
+}
+
+#servicePageBreak span {
+
+}
+
+#servicePageBreak2 {
+    width: 90%;
+    height: 3%;
+    /* border-radius: 10px; */
+    background-color: black;
+    background-color: rgb(104, 80, 28);
 }
 
 #intro-quote {
     text-align: center;
-    margin-top: 1%;
-    font-size: 1.1rem;
+    margin-top: 4%;
+    font-size: 1.6rem;
 }
 
 #main-service-img {
@@ -94,6 +136,7 @@
 
 #services-provided {
     height: 300vh;
+    height: 350vh;
     
     /*Can remove the height for it just to fit content but gap wont work as a result so will need margin tops*/
     width: 100%;
@@ -175,6 +218,19 @@
     margin-left: 10%;
     padding: .5%;
     width: fit-content;
+}
+
+.service-contact {
+    margin-top: 5%;
+    /* margin-top: 10%;
+    margin-left: 12%; */
+    text-align: center;
+    /* padding: .5%; */
+    height: 80px;
+    width: 35%;
+    /* width: fit-content; */
+    background-color: rgb(255, 255, 255);
+    border: 3px solid green;
 }
 
 #orderedList {
