--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -1,3 +1,12 @@
+/* #homePage-all {
+    display: flex;
+    flex-direction: column;
+  
+    align-items: center;
+    background-color: white;
+    z-index: 0;
+} */
+
 #contact-header {
     height: 4vh;
     /* background-color: rgb(0, 0, 0); */
@@ -534,7 +543,7 @@
     justify-content: space-evenly;
     /* justify-content: center; */
     align-items: center;
-    background-color: rgb(103, 139, 92);;
+    background-color: rgb(103, 139, 92);
 }
 
 .footer-sections {
@@ -556,22 +565,47 @@
 
     #hiddenMobileNav {
         
-        
+        position: absolute;
+        top: 0;
         display: block;
-        height: 80vh;
+        display: flex;
+        justify-content: center;
+        
+        /* height: 80vh; */
+        height: 100%;
+        
         width: 100%;
         background-color: rgba(0, 0, 0, 0.267);
         background-color: rgb(183, 221, 161);
+        background-color: rgb(98, 209, 131);
+        background-color: rgb(227, 231, 163);
+        z-index: 1;
     }
 
     .mobileNavLink-Container {
-        height: 60%;
+        height: 50%;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        gap: 1.5%;
+        margin-top: 60%;
+        justify-content: top;
         /* justify-content: space-evenly; */
         align-items: center;
         font-size: 18pt;
+        font-size: 25pt;
+        
+    }
+
+    .mobileLinks {
+        text-decoration: none;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        color: rgb(27, 16, 6);
+        /* font-weight: bold; */
+    }
+
+    .mobileLinks:hover {
+        text-decoration-line: underline;
     }
 
     #hero-image {
@@ -649,6 +683,119 @@
 
     }
 
+    #services-section {
+        background-color: black;
+        /* margin-top: -10%; */
+        width: 100%;
+        height: 110vh;
+        position: relative;
+        background-color: #FDFDD5;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    #services-container {
+        display: flex;
+        flex-direction: column;
+        height: 90%;
+        
+    }
+
+    #services-desc {
+        position: relative;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+        height: 50%;
+        width: 80%;
+        padding-top: 3%;
+        padding-bottom: 3%;
+        background-color: rgb(140, 190, 120);
+        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+        border-bottom: 25px solid green;
+        border-bottom: 25px solid rgb(103, 139, 92);
+        border-radius: 25px;
+    }
+    
+    #services-desc span {
+        
+        font-size: 1.5em;
+        text-align: center;
+        width: 100%;
+        font-weight: 20;
+    }
+    
+    .serviceMotto {
+        font-family: "Pacifico", cursive;
+        letter-spacing: 1px;
+    }
+    
+    .littleMower {
+        display: flex;
+        justify-content: center;
+        
+        height: 20%;
+        width: 40%;
+        position: absolute;
+        left: 0;
+        bottom: -10%;
+    }
+    
+    .littleMower img {
+        height: 100%;
+        width: 100%;
+        object-fit: none;
+    }
+    
+    #plant-image {
+        background-image: url("../images/plant_logo.png");
+        width: 15%;
+        height: 15%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+    
+    
+    #services-desc button {
+        background: none;
+        outline: 0;
+        border: 1px solid white;
+        padding: 10px;
+        transition: .4s;
+        width: 40%;
+        color: white;
+        
+        border-radius: 50px;
+    }
+    
+    #services-desc button:hover {
+        background-color: white;
+        color: rgb(140, 190, 120);
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     #projects-content {
         gap: 10%;
     }
@@ -662,6 +809,7 @@
         height: 50vh;
         display: flex;
         flex-direction: column;
+        
     }
 }
 
