--- a/client/src/css/Contact.css
+++ b/client/src/css/Contact.css
@@ -1,9 +1,4 @@
-#contact-container {
-    width: 100%;
-    height: 160vh;
-    background-color: rgb(140, 190, 120);
-    display: block;
-}
+
 
 #image-section {
     height: 60vh;
@@ -39,13 +34,17 @@
 }
 
 #contacts-section {
-    margin: auto;
+    
+    /* margin: auto; */
+    margin-top: 10vh;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     width: 90%;
+    width: 100%;
     height: 60%;
+    height: 100vh;
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.1em;
@@ -90,8 +89,11 @@
 }
 
 .input-container input, textarea {
+    width: 100%;
     font-size: 15px;
+    
     padding: 15px;
+    
     border-radius: 5px;
     border: 1px solid black;
 
@@ -115,3 +117,147 @@
     background-color: rgb(50, 200, 50);
 }
 
+@media (max-width: 600px) {
+
+    #image-section {
+        height: 60vh;
+        width: 100%;
+        background-image: url("../images/simple_life_03.jpg");
+        background-size: none;
+        background-repeat: no-repeat;
+        background-position: center;
+        position: relative;
+        z-index: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 3px solid rgb(0, 0, 0);
+    }
+
+    #image-section span {
+        font-size: 1.5em;
+        color: white;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        letter-spacing: 6px;
+    
+    }
+
+    #contacts-section {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: space-evenly; */
+        justify-content: flex-start;
+        align-items: center;
+        width: 90%;
+
+        width: 100%;
+        height: 150vh;
+    
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 1.1em;
+    }
+    
+    #contact-information {
+        margin-top: 30%;
+        
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        gap: 0px;
+        height: fit-content;
+        width: 90%;
+        padding-right: 0px;
+        margin-bottom: 15%;
+        
+    }
+
+
+
+
+
+
+    #contact-form-container {
+        /* height: 50%;
+        height: 70%; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 5%;
+        height: 85vh;
+        width: 100%;
+        
+        background-color: rgb(75, 75, 75);
+        box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
+        /* box-shadow: 0px 0px 0px 0px white; */
+    }
+
+    #contact-form-container form {
+        margin: 0 auto;
+        margin: 0;
+        width: 90%;
+        height: 95%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        background-color: white;
+    }
+
+    .first-last {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .first-last .input-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+    }
+
+    .first-last .input-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 45%;
+    }
+    
+    .input-container {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        /* gap: 10px; */
+        gap: 0px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    
+    .input-container input, textarea {
+        font-size: 15px;
+        padding: 15px;
+        border-radius: 5px;
+        border: 1px solid black;
+    
+    }
+    
+    #contact-form-container button {
+        margin-right: auto;
+        margin-left: 0;
+        padding: 15px;
+        width: 25%;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        background-color: rgb(50, 160, 50);
+        transition: .2s;
+        letter-spacing: 2px;
+        font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    }
+    
+    #contact-form-container button:hover {
+        background-color: rgb(50, 200, 50);
+    }
+    
+}
