--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -16,6 +16,7 @@
     /* background-color: rgb(233, 214, 152); */
     /* background-color: rgb(224, 183, 94); */
     background-color: rgb(253, 253, 213);
+    
     /* background-color: rgb(94, 160, 94);
     background-color: rgb(140, 190, 120);
     background-color: rgb(141, 140, 139); */
@@ -50,14 +51,20 @@
     width: 10%;
     background-color: yellow;
     background-color: rgb(255, 255, 255);
-    border-radius: 50%;
+    /* border-radius: 50%; */
     box-shadow: 0px 0px 10px 0px black;
 
     /* border-bottom: 10px solid saddlebrown; */
 
     border: 15px solid rgb(228, 195, 171);
-
+    
     /* box-shadow: 0px 0px 11px 15px rgb(228, 195, 171); */
+}
+
+.service-img:hover {
+    cursor: pointer;
+    /* box-shadow: 0 0 20px rgb(8, 70, 8); */
+    
 }
 
 .service-img img {
@@ -88,25 +95,313 @@
     height: 5%;
     background-color: black;
     background-color: rgb(43, 104, 28); */
-
-    margin-top: 2%;
+    position: relative;
+    margin-top: 4.5%;
     width: 80%;
     height: 0.2%;
     background-color: black;
     background-color: rgb(43, 104, 28);
 
+    height: 3%;
+
+
 }
 
-#servicePageBreak span {
+#littleMower {
+    /* position: absolute;
+    top: -500%;
+    left: 0%;
+    height: 600%;
+    width: 7%;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: url("../images/orange_mower2.png");
+    
+    animation-duration: 60s;
+    animation-iteration-count: calc(10);
+    animation-name: mow-lawn; */
 
 }
+
+#littleMower {
+    position: absolute;
+    top: -400%;
+    left: 0%;
+    height: 600%;
+    width: 20%;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: url("../images/orange_mower2.png");
+    background-size: cover;
+    
+    animation-duration: 60s;
+    animation-iteration-count: calc(10);
+    animation-name: mow-lawn;
+
+}
+
+@keyframes mow-lawn {
+    from {
+        left: 0%;
+    }
+
+    50% {
+        left: 88%;
+        
+        
+    }
+
+    99.9% {
+        /* transform: rotateY(180deg); */
+        
+ 
+    }
+
+    to {
+        left: 0%;
+    }
+}
+
+#placingTurf {
+    position: absolute;
+    top: 0;
+    
+    height: 100%;
+    width: 100%;
+    background-color: rgb(155, 204, 80);
+
+    animation-duration: 10s;
+    /* animation-iteration-count: calc(5); */
+    animation-name: place-new-lawn;
+}
+
+@keyframes place-new-lawn {
+
+    from {
+        width: 10%;
+    }
+
+    to {
+        width: 100%;
+    }
+}
+
+/* #placingTurf img{
+    position: absolute;
+    right: 0;
+    height: 100%;
+    
+} */
+
+#servicePageBreakSnow {
+    /* width: 90%;
+    height: 5%;
+    background-color: black;
+    background-color: rgb(43, 104, 28); */
+    position: relative;
+    margin-top: 2%;
+    width: 80%;
+    height: 0.2%;
+    background-color: black;
+    background-color: rgb(255, 255, 255);
+    border: 3px solid rgb(173, 173, 229);
+    border-radius: 5px;
+    height: 3%;
+
+
+}
+
+#noSnowShovel {
+    display: none;
+}
+#snowShovel {
+    /* position: absolute;
+    top: -500%;
+    left: 47.5%;
+    height: 600%;
+    width: 7%;
+    background-color: rgba(0, 0, 0, 0);
+    background-image: ("../images/orange_snow_shovel-2.png");
+    background-size: cover;
+    animation-duration: 2s;
+    animation-iteration-count: calc(10);
+    animation-name: shovel; */
+}
+
+#snowShovel {
+    position: absolute;
+    top: -800%;
+    left: 47.5%;
+    height: 900%;
+    width: 10%;
+    background-color: rgba(0, 0, 0, 0);
+    
+    background-image: url("../images/orange_snow_shovel-2.png");
+    background-size: cover;
+    animation-duration: 2s;
+    animation-iteration-count: calc(10);
+    animation-name: shovel;
+}
+
+#snowShovel img {
+    height: 100%;
+    width: 100%;
+}
+
+@keyframes shovel {
+    from {
+        top: -800%;
+        
+    }
+
+    10% {
+        /* left: 47.3; */
+        left: 47.8%;
+    }
+
+    20% {
+        /* left: 47.1; */
+        left: 48%;
+    }
+
+    30% {
+        /* left: 47.3; */
+    }
+
+    40% {
+        left: 47.3;
+        top: -480%;
+        /* left: 46.6; */
+    }
+
+    50% {
+        left: 46.3%;
+    }
+
+    60% {
+        left: 46.3%;
+    }
+    70% {
+        left: 46.3%;
+    }
+    80% {
+        left: 46.3%;
+    }
+    90% {
+        left: 46.3%;
+    }
+    100% {
+        left: 46.3%;
+        /* transform: rotateY(-40deg); */
+    }
+    
+
+    to {
+        top: -500%;
+        left: 46.3%;
+    }
+
+
+
+}
+
+#growingTree {
+    position: absolute;
+    top: -1350%;
+    left: 41.5%;
+    height: 1500%;
+    width: 17%;
+    background-color: rgba(255, 0, 0, 0);
+    background-image: url("../images/growing_tree_4.5.png");
+    background-image: url("../images/growing_tree_1.5.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    animation-duration: 10s;
+    /* animation-iteration-count: calc(10); */
+    animation-name: growTree;
+}
+
+@keyframes growTree {
+    /* from {
+        background-image: url("../images/growing_tree_1.5.png");
+        background-size: cover;
+    }
+
+    50% {
+        background-image: url("../images/growing_tree_2.5.png");
+        background-size: cover;
+    }
+
+    to {
+        background-image: url("../images/growing_tree_4.5.png");
+        background-size: cover;
+    } */
+
+    10% {
+        background-image: url("../images/growing_tree_1.5.png");
+
+    }
+
+    20% {
+        background-image: url("../images/growing_tree_1.5.png");
+    }
+
+    25% {
+        background-image: url("../images/growing_tree_1.5.png");
+    }
+
+    30% {
+        background-image: url("../images/growing_tree_2.5.png")
+    }
+
+    50% {
+        background-image: url("../images/growing_tree_2.5.png")
+    }
+
+    60% {
+        background-image: url("../images/growing_tree_3.5.png")
+    }
+
+    75% {
+        background-image: url("../images/growing_tree_3.5.png")
+    }
+
+    80% {
+        background-image: url("../images/growing_tree_3.5.png")
+    }
+
+    85% {
+        background-image: url("../images/growing_tree_4.5.png");
+    }
+
+    90% {
+        background-image: url("../images/growing_tree_4.5.png");
+    }
+
+    100% {
+        background-image: url("../images/growing_tree_4.5.png");
+    }
+}
+
+
 
 #servicePageBreak2 {
-    width: 90%;
-    height: 3%;
+    width: 80%;
+    height: 8%;
     /* border-radius: 10px; */
     background-color: black;
     background-color: rgb(104, 80, 28);
+    background-color: rgb(156, 97, 54);
+}
+
+#servicePageBreakSnow2 {
+    width: 80%;
+    height: 8%;
+    /* border-radius: 10px; */
+    background-color: black;
+    background-color: rgb(104, 80, 28);
+    background-color: rgb(156, 97, 54);
+    background-color: rgb(173, 173, 229);
 }
 
 #intro-quote {
@@ -180,6 +475,7 @@
 
 .service1 {
     height: 50%;
+    height: fit-content;
 
     /* background-color: red; */
 
@@ -215,23 +511,24 @@
 }
 
 .service1 button {
-    margin-left: 10%;
+    margin-top: 10%;
+    /* margin-left: 10%; */
+    height: 45px;
     padding: .5%;
-    width: fit-content;
+    /* width: fit-content; */
+    width: 50%;
+    background-color: white;
+    border: 2px solid rgb(103, 139, 92);
+    font-size: 14pt;
+    border-radius: 5px;
 }
 
-.service-contact {
-    margin-top: 5%;
-    /* margin-top: 10%;
-    margin-left: 12%; */
-    text-align: center;
-    /* padding: .5%; */
-    height: 80px;
-    width: 35%;
-    /* width: fit-content; */
-    background-color: rgb(255, 255, 255);
-    border: 3px solid green;
+.service1 button:hover {
+    cursor: pointer;
+    background-color: rgb(103, 139, 92);
+    color: white;
 }
+
 
 #orderedList {
     
