--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,9 +42,13 @@ body {
   /* background-color: red; */
   background-color: rgb(253, 253, 213);
   border: 5px solid black;
+  z-index: 0;
 }
 
+
+
 #servicesPage {
+  position: relative;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
@@ -58,6 +62,7 @@ body {
 }
 
 #projectsPage {
+  position: relative;
   display: flex;
   flex-direction: column;
   /* justify-content: center; */
@@ -70,4 +75,15 @@ body {
   border: 5px solid rgb(255, 10, 10);
 }
 
-
+#contact-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  /* height: 160vh; */
+  min-height: 160vh;
+  background-color: rgb(140, 190, 120);
+  display: block;
+  border: 2px solid black;
+}
