--- a/client/src/index.css
+++ b/client/src/index.css
@@ -75,6 +75,20 @@ body {
   border: 5px solid rgb(255, 10, 10);
 }
 
+#aboutPage {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+
+  min-height: 100vh;
+  width: 100%;
+  /* background-color: red; */
+  /* background-color: rgb(253, 253, 213); */
+  border: 5px solid rgb(10, 47, 255);
+}
+
 #contact-container {
   display: flex;
   flex-direction: column;
