added texture to dirt and grass in services, fixed mobile animations, changed up font family styles

--- a/client/src/css/Homepage.css
+++ b/client/src/css/Homepage.css
@@ -444,6 +444,8 @@
     color: transparent; /* Transparent text */
     border-radius: 50px;
     color: white;
+
+    font-size: 16pt;
 }
 
 #projects-section button:hover {
