--- a/client/src/css/Projects.css
+++ b/client/src/css/Projects.css
@@ -2,6 +2,8 @@
     text-align: center;
     margin-top: 3%;
     font-size: 2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    letter-spacing: 2px;
 
 }
 
